-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0 Alpha
-
None
-
Mageia Linux Cauldron x86_64, gcc 5.3
-
7fc567eda8a187e365f4c29c6e8f08440bf31218
If I place ComboBox into Dialog from QtQuick Controls, it cannot show items list on click and I see the following error in the console:
QML Panel: is not in an ApplicationWindow.
It happens even if main window is implemented as ApplicationWindow from Qt.labs.controls.
This is due to the QQuickPopup::show() requires, that popup is placed into QQuickApplicationWindow.
Program to reproduce:
import QtQuick 2.5 import Qt.labs.controls 1.0 import QtQuick.Dialogs 1.2 ApplicationWindow { visible: true width: 640 height: 480 Dialog { visible: true ComboBox { model: [ "1", "2" ] } } }